--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -155,6 +155,7 @@
       </thead>
       <!-- Switch ON taxRate.action - Table row -->
       <tr tabindex="0" class="animate-switch-container" ng-repeat="taxRate in companyTaxRatesList | orderBy: 'created' track by $index" ng-switch on="taxRate.action" ng-class="taxRateRowClass(taxRate)">
+
         <!-- Switch for taxTypeCode -->
         <td class="animate-switch" ng-switch-when="read">{{ taxRate.taxTypeCode.taxTypeCode }}</td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
@@ -169,6 +170,7 @@
           </ui-select>
         </td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.taxTypeCode" theme="bootstrap" name="taxTypeCode">
             <ui-select-match placeholder="Tax Type">
               {{ $select.selected.taxTypeCode }}
@@ -178,6 +180,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
+
         <!-- Switch for departure countryName -->
         <td class="animate-switch" ng-switch-when="read">{{ taxRate.departureStationsCountryName.countryName }}</td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
@@ -192,6 +195,7 @@
           </ui-select>
         </td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.departureStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateDepartureCountryFieldDisabledForCreate(taxRate)" ng-change="filterDepartureTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -201,6 +205,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
+
         <!-- Switch for departure companyTaxRateStations -->
         <td class="animate-switch col-xs-1" ng-switch-when="read">
           <p class="label label-primary tax-label" ng-repeat="station in taxRate.departureStations | orderBy:'stationCode'">
@@ -217,6 +222,7 @@
             </ui-select>
         </td>
         <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create">
+          <div style="height:20px"><input ng-model="taxRate.allDepartureStations" ng-click="addAllDepartureStations(taxRate)" type="checkbox"/> All</div>
           <ui-select ng-if="viewIsReady"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.departureStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateDepartureStationsDisabledForCreate(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableDepartureStations | filter: $select.search | orderBy:'stationCode'" position='auto'>
@@ -224,6 +230,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
+
         <!-- Switch for arrival countryName -->
         <td class="animate-switch" ng-switch-when="read">{{ taxRate.arrivalStationsCountryName.countryName }}</td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
@@ -238,6 +245,7 @@
           </ui-select>
         </td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.arrivalStationsCountryName" theme="bootstrap" name="taxRateCountry" ng-disabled="isTaxRateArrivalCountryFieldDisabledForCreate(taxRate)" ng-change="filterArrivalTaxRateStations(taxRate)">
             <ui-select-match placeholder="Country">
               {{ $select.selected.countryName }}
@@ -263,6 +271,7 @@
           </ui-select>
         </td>
         <td class="animate-switch tax-rates-multi-select col-xs-1" ng-switch-when="create">
+          <div style="height:20px"><input ng-model="taxRate.allArrivalStations" ng-click="addAllArrivalStations(taxRate)" type="checkbox"/> All</div>
           <ui-select ng-if="viewIsReady"  on-select="onUiSelect($select)"  multiple ng-model="taxRate.arrivalStations" theme="bootstrap" sortable="true" close-on-select="false" ng-disabled="isTaxRateArrivalStationsDisabledForCreate(taxRate)" style="margin-bottom:10px; min-height:35px;">
             <ui-select-match placeholder="Stations">{{ $item.stationCode }}</ui-select-match>
             <ui-select-choices group-by="'countryName'" repeat="station in taxRate.availableArrivalStations | filter: $select.search | orderBy:'stationCode'" position='auto'>
@@ -270,6 +279,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
+
         <!-- Switch for taxRateType -->
         <td class="animate-switch" ng-switch-when="read">{{ taxRate.taxRateType.taxRateType }}</td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="edit">
@@ -284,6 +294,7 @@
           </ui-select>
         </td>
         <td class="animate-switch tax-rates-ui-select" ng-switch-when="create">
+          <div style="height:20px"></div>
           <ui-select ng-model="taxRate.taxRateType" theme="bootstrap" name="taxRateType" ng-change="shouldTaxRateCurrencyBeClear(taxRate)">
             <ui-select-match placeholder="Rate Type">
               {{ $select.selected.taxRateType }}
@@ -293,6 +304,7 @@
             </ui-select-choices>
           </ui-select>
         </td>
+
         <!-- Switch for rate -->
         <td class="animate-switch" ng-switch-when="read">
           <div ng-show="isTaxRateTypePercentage(taxRate)">{{ taxRate.taxRateValue }}  %</div>
@@ -312,6 +324,7 @@
           </div>
         </td>
         <td class="animate-switch tax-rates-input" ng-switch-when="create">
+          <div style="height:20px"></div>
           <div ng-show="isTaxRateTypePercentage(taxRate)">
             <input ng-model="taxRate.taxRateValue" type="text" name="taxRateValue" class="form-control" placeholder="Tax Rate">
           </div>
@@ -321,6 +334,7 @@
             </a>
           </div>
         </td>
+
         <!-- Switch for startDate -->
         <td class="animate-switch" ng-switch-when="read">{{ taxRate.startDate }}</td>
         <td class="animate-switch tax-rates-dates" ng-switch-when="edit">
@@ -328,6 +342,7 @@
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" disable="isDisabled(taxRate)" min-date="determineMinDate(taxRate.startDate)" orientation="determineDatePickerOrientation(taxRate)"></date-picker-field>
         </td>
         <td class="animate-switch tax-rates-dates" ng-switch-when="create">
+          <div style="height:20px"></div>
           <date-picker-field disable-past="true" ng-model="taxRate.startDate" min-date="determineMinDate()"></date-picker-field>
         </td>
         <!-- Switch for endDate -->
@@ -343,6 +358,7 @@
             orientation="determineDatePickerOrientation(taxRate)" ></date-picker-field>
         </td>
         <td class="animate-switch tax-rates-dates" style="position:relative !important" ng-switch-when="create">
+          <div style="height:20px"></div>
           <date-picker-field
             min-date="minDate"
             custom-effective="true"
@@ -351,10 +367,11 @@
         </td>
         <td ng-switch-when="read">{{ getUpdatedOn(taxRate) }}</td>
         <td ng-switch-when="edit" style="padding-top:15px;"><div style="height:20px"></div>{{ getUpdatedOn(taxRate) }}</td>
-        <td ng-switch-when="create">{{ getUpdatedOn(taxRate) }}</td>
+        <td ng-switch-when="create"><div style="height:20px"></div>{{ getUpdatedOn(taxRate) }}</td>
         <td ng-switch-when="read">{{ getUpdateBy(taxRate) }}</td>
         <td ng-switch-when="edit" style="padding-top:15px;"><div style="height:20px"></div>{{ getUpdateBy(taxRate) }}</td>
-        <td ng-switch-when="create">{{ getUpdateBy(taxRate) }}</td>
+        <td ng-switch-when="create"><div style="height:20px"></div>{{ getUpdateBy(taxRate) }}</td>
+
         <!-- Buttons for Read -->
         <td class="animate-switch" ng-switch-when="read" ng-show="isCRUD">
           <a class="btn btn-primary btn-xs" ng-show="isTaxRateEditable(taxRate)" ng-click="editCompanyTaxRate(taxRate)">
@@ -364,6 +381,7 @@
             <span class="fa fa-trash"></span>
           </a>
         </td>
+        
         <!-- Buttons for Edit -->
         <td class="animate-switch tax-rates-action" ng-switch-when="edit" ng-show="isCRUD">
           <div style="height:20px"></div>
@@ -374,8 +392,10 @@
             <span class="fa fa-remove"></span>
           </a>
         </td>
+
         <!-- Buttons for Create -->
         <td class="animate-switch tax-rates-action" ng-switch-when="create" ng-show="isCRUD">
+          <div style="height:20px"></div>
           <a class="btn btn-primary btn-xs" ng-click="createNewTaxRatePayload(taxRate)">
             <span class="fa fa-save"></span>
           </a>
