TSVPORTAL-11471 - Replace style with class

--- a/app/styles/_containers.scss
+++ b/app/styles/_containers.scss
@@ -75,3 +75,7 @@ body {
   -webkit-animation: newfadeoutgreen 3s linear 2s;
   animation: newfadeoutgreen 3s linear 2s;
 }
+
+.height-20 {
+  height:20px;
+}
