TSVPORTAL-11569 | auto-complete off.

--- a/app/views/directives/date-picker-field.html
+++ b/app/views/directives/date-picker-field.html
@@ -8,6 +8,7 @@
       <input name="{{ name }}"
         type="text"
         class="form-control"
+        autocomplete="off"
         ng-model="ngModel"
         placeholder="{{ placeholder }}"/>
     </p>
