--- a/app/views/priceupdater-create.html
+++ b/app/views/priceupdater-create.html
@@ -89,7 +89,7 @@
 									<div class="input-group-addon">
     	          						{{ currency.code }} *
 									</div>
-									<input name="Currencies List - {{ currency.code }}" ng-model="currency.price" ng-required="!rule.percentage"  
+									<input name="Price Increase/Decrease By - {{ currency.code }}" ng-model="currency.price" ng-required="!rule.percentage"  
 											ng-disabled="isDisabled()" type="text" custom-validity custom-pattern="numberOrDecimal" class="form-control" maxlength="8" placeholder="1.00"/>
 								</div>
 							</div>
@@ -110,7 +110,7 @@
 									<div class="input-group-addon">
     	          						{{ currency.code }} *
 									</div>
-									<input name="Currencies List - {{ currency.code }}" ng-model="currency.limitPrice" ng-required="true"  
+									<input name="Threshold Limit - {{ currency.code }}" ng-model="currency.limitPrice" ng-required="true"  
 											ng-disabled="isDisabled()" type="text" custom-validity custom-pattern="numberOrDecimal" class="form-control" maxlength="8" placeholder="1.00"/>
 								</div>
 							</div>
