TSVPORTAL-11471 - Fixed remove modal label

--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -459,7 +459,7 @@
 
 
 <confirmation-modal
-  title="You are about to remove a Company Tax Rate."
+  title="You are about to remove a Route Tax Rate."
   body="Are you sure that you want to permenantly remove Tax Rate ID: {{taxRateToRemove.id}} ?"
   confirmation-callback="deleteCompanyTaxRate(taxRateToRemove)"
   confirmation-label="Yes, Delete."
