--- a/app/views/route-tax-rates.html
+++ b/app/views/route-tax-rates.html
@@ -426,7 +426,7 @@
           <div ng-if="!taxRateAmountsForm.$valid">
             <div class="panel panel-danger" id="error-dialog">
               <div ng-repeat="required in taxRateAmountsForm.$error.required" class="panel-heading"><strong>{{ getCurrencyFromName(required.$name) }}</strong> - amount should not be empty</div>
-              <div ng-repeat="pattern in taxRateAmountsForm.$error.pattern" class="panel-heading"><strong>{{ getCurrencyFromName(pattern.$name) }}</strong> - amount should be a number</div>
+              <div ng-repeat="pattern in taxRateAmountsForm.$error.pattern" class="panel-heading"><strong>{{ getCurrencyFromName(pattern.$name) }}</strong> - amount should be a number lower than or equal to 9999999.99</div>
             </div>
 
           </div>
@@ -435,7 +435,7 @@
               <tr ng-repeat="currency in currenciesList">
                 <td>{{ currency.code }}</td>
                 <td>
-                  <input ng-model="taxRateToEditAmounts[currency.id].amount" type="text" name="amount[{{currency.code}}]" class="form-control" ng-required="true" ng-pattern="regexp.price" placeholder="0.00">
+                  <input ng-model="taxRateToEditAmounts[currency.id].amount" type="text" name="amount[{{currency.code}}]" class="form-control" ng-required="true" ng-pattern="/^\$?\s?[0-9\,]{1,7}(\.\d{0,2})?$/" placeholder="0.00">
                 </td>
               </tr>
             </table>
