--- a/app/views/promotion-list.html
+++ b/app/views/promotion-list.html
@@ -70,7 +70,6 @@
           </div>
         </div>
         <div class="panel-footer text-right">
-        <div class="panel-footer text-right">
           <button type="button" class="btn btn-default" ng-click="clearForm()" id="clearPromotionListId">Clear</button>
           <button type="submit" class="btn btn-primary" id="searchPromotionListId">Search</button>
         </div>
@@ -90,7 +89,7 @@
       <th>Qualifier Type</th>
       <th>Benefit Type</th>
       <th>Updated Date/Time</th>
-      <th>Updated User</th>      
+      <th>Updated User</th>
       <th>Effective From</th>
       <th>Effective To</th>
       <th>Actions</th>
@@ -104,7 +103,7 @@
       <td>{{ promotion.promotionTypeName }}</td>
       <td>{{ promotion.benefitTypeName }}</td>
       <td>{{ getUpdatedOn(promotion) }}</td>
-      <td>{{ getUpdateBy(promotion) }}</td>      
+      <td>{{ getUpdateBy(promotion) }}</td>
       <td>{{ promotion.startDate }}</td>
       <td>{{ promotion.endDate }}</td>
       <td>
@@ -113,6 +112,9 @@
         </button>
         <button class="btn btn-primary btn-xs" ng-click="editPromotion(promotion)" ng-show="isCRUD && isPromotionEditable(promotion)">
           <i class="fa fa-pencil"></i>
+        </button>
+        <button class="btn btn-warning btn-xs" ng-click="copyPromotion(promotion)" ng-show="isCRUD">
+          <i class="fa fa-copy"></i>
         </button>
         <button class="btn btn-danger btn-xs" ng-click="showDeleteConfirmation($index, promotion)" ng-hide="!isCRUD || isPromotionReadOnly(promotion)">
           <i class="fa fa-trash"></i>
