--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -13,7 +13,7 @@
             </button>
             <button class="btn btn-primary" ng-click="save()"
                     ng-hide="readOnly"
-                    ng-disabled="readOnly">
+                    ng-disabled="readOnly || isAnyRetailItemExpired()">
               <span class="fa fa-check-square-o" aria-hidden="true"></span>
               <span class="hidden-xs">{{ saveButtonText }}</span>
             </button>
@@ -68,10 +68,10 @@
       <div class="col-xs-12 col-md-6">
         <div class="row">
           <div class="col-xs-12 col-sm-6">
-               <date-picker-field ng-if="editing && isDisabled" disable="shouldDisableStartDate || readOnly" name="EffectiveFrom" label="Effective From"  custom-effective="editing"
+               <date-picker-field ng-if="editing && isDisabled" disable="(shouldDisableStartDate && !isCopy()) || readOnly" name="EffectiveFrom" label="Effective From"  custom-effective="editing"
                                min-date="'+1d'" required="true" ng-model="promotion.startDate"></date-picker-field>
-                               
-               <date-picker-field ng-if="!editing || !isDisabled" disable="shouldDisableStartDate || readOnly" name="EffectiveFrom" label="Effective From"
+
+               <date-picker-field ng-if="!editing || !isDisabled" disable="(shouldDisableStartDate && !isCopy()) || readOnly" name="EffectiveFrom" label="Effective From"
                                min-date="'+1d'" required="true" ng-model="promotion.startDate"></date-picker-field>
 
           </div>
@@ -210,13 +210,14 @@
           <div class="form-group">
             <label>Retail Item*</label>
             <ui-select theme="bootstrap" ng-model="retailItemData.retailItem" ng-disabled="readOnly || isDisabled" required
-                       ng-init="itemSelectInit($index)" ng-change="itemSelectChanged($index)" name="RetailItem">
+                       ng-init="itemSelectInit($index, retailItemData)" ng-change="itemSelectChanged($index)" name="RetailItem">
               <ui-select-match placeholder="Select Item">{{ $select.selected.itemName }}</ui-select-match>
               <ui-select-choices repeat="masterItem in repeatableItemListSelectOptions[$index] | filter: {itemName:$select.search}"
                                  ui-disable-choice="disabledItems(masterItem)">
                 <div ng-bind-html="masterItem.itemName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
+            <div ng-if="!readOnly && retailItemData.retailItem.isExpired" style="color:red">This retail item expired!</div>
           </div>
         </div>
         <div class="col-xs-6 col-sm-2">
