--- a/app/views/promotion-catalog.html
+++ b/app/views/promotion-catalog.html
@@ -7,7 +7,7 @@
     <div class="edit-controls">
       <div class="row">
         <div class="col-xs-6">
-          <h2 class="view-name">Promotion Catalog</h2>
+          <h2 class="view-name">{{ viewName }}</h2>
         </div>
         <div class="col-xs-6 text-right">
           <a class="btn btn-default" ng-href="#/promotion-catalog-list" class="btn">Back</a>
@@ -48,6 +48,7 @@
           required="true">
         </date-picker-field>
         <date-picker-field ng-if="!disableEditField"
+          custom-effective="true"
           name="startDate"
           min-date="startMinDate"
           ng-model="promotionCatalog.startDate"
