TSVPORTAL-11590 - Fix expiration message for promotion categories

--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -13,7 +13,7 @@
             </button>
             <button class="btn btn-primary" ng-click="save()"
                     ng-hide="readOnly"
-                    ng-disabled="readOnly || isAnyRetailItemExpired()">
+                    ng-disabled="readOnly || isAnyRetailItemExpired() || isAnyPromotionCategoryExpired()">
               <span class="fa fa-check-square-o" aria-hidden="true"></span>
               <span class="hidden-xs">{{ saveButtonText }}</span>
             </button>
@@ -156,7 +156,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
-            <div ng-if="!readOnly && promotionCategoryData.promotionCategory.isExpired" style="color:red">This promotion category expired!</div>
+            <div ng-if="!readOnly && promotionCategoryData.isExpired" style="color:red">This promotion category expired!</div>
           </div>
         </div>
         <div class="col-xs-6 col-sm-2">
