--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -110,6 +110,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
+            <div ng-if="!readOnly && promotion.spendLimitCategory.isExpired" style="color:red">This promotion category expired!</div>
           </div>
           <div class="form-group">
             <label>Spend Limit Value*</label>
@@ -128,6 +129,7 @@
                          required>
                 </div>
               </div>
+            </div>
           </div>
         </fieldset>
       </div>
@@ -156,7 +158,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
-            <div ng-if="!readOnly && promotionCategoryData.isExpired" style="color:red">This promotion category expired!</div>
+            <div ng-if="!readOnly && promotionCategoryData.promotionCategory.isExpired" style="color:red">This promotion category expired!</div>
           </div>
         </div>
         <div class="col-xs-6 col-sm-2">
