--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -13,7 +13,7 @@
             </button>
             <button class="btn btn-primary" ng-click="save()"
                     ng-hide="readOnly"
-                    ng-disabled="readOnly || isAnyRetailItemExpired() || isAnyPromotionCategoryExpired()">
+                    ng-disabled="readOnly || (!isCreate() && (isAnyRetailItemExpired() || isAnyPromotionCategoryExpired()))">
               <span class="fa fa-check-square-o" aria-hidden="true"></span>
               <span class="hidden-xs">{{ saveButtonText }}</span>
             </button>
@@ -110,7 +110,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
-            <div ng-if="!readOnly && promotion.spendLimitCategory.isExpired" style="color:red">This promotion category expired!</div>
+            <div ng-if="!readOnly && !isCreate() && promotion.spendLimitCategory.isExpired" style="color:red">This promotion category expired!</div>
           </div>
           <div class="form-group">
             <label>Spend Limit Value*</label>
@@ -158,7 +158,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
-            <div ng-if="!readOnly && promotionCategoryData.promotionCategory.isExpired" style="color:red">This promotion category expired!</div>
+            <div ng-if="!readOnly && !isCreate() && promotionCategoryData.promotionCategory.isExpired" style="color:red">This promotion category expired!</div>
           </div>
         </div>
         <div class="col-xs-6 col-sm-2">
@@ -220,7 +220,7 @@
                 <div ng-bind-html="masterItem.itemName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
-            <div ng-if="!readOnly && retailItemData.retailItem.isExpired" style="color:red">This retail item expired!</div>
+            <div ng-if="!readOnly && !isCreate() && retailItemData.retailItem.isExpired" style="color:red">This retail item expired!</div>
           </div>
         </div>
         <div class="col-xs-6 col-sm-2">
