--- a/app/views/promotions.html
+++ b/app/views/promotions.html
@@ -249,7 +249,6 @@
       <div class="col-xs-12 col-md-6">
         <div class="form-group">
           <label>Benefit Type*</label>
-          <fieldset>
           <ui-select theme="bootstrap" ng-model="promotion.benefitType" ng-disabled="readOnly || isDisabled" required name="BenefitType">
             <ui-select-match placeholder="Select Benefit Type">{{ $select.selected.name }}</ui-select-match>
             <ui-select-choices repeat="benefitType in selectOptions.benefitTypes | filter: {name:$select.search}">
@@ -281,6 +280,7 @@
                 <div ng-bind-html="promotionCategory.promotionCategoryName | highlight: $select.search"></div>
               </ui-select-choices>
             </ui-select>
+            <div ng-if="!readOnly && !isCreate() && promotion.discountCategory.isExpired" style="color:red">This promotion category expired!</div>
           </div>
 
           <div class="row" ng-if="promotion.benefitDiscountApply.name === 'Retail Item'">
