TSVPORTAL-11709 | Template update.

--- a/app/views/directives/excel-upload.reportexchange.html
+++ b/app/views/directives/excel-upload.reportexchange.html
@@ -20,7 +20,7 @@
           <li><b>Accepted Currency Code</b> - Required. This is the  Accepted Currency Code of retail company and supports up to 3 characters.</li>
 		  <li><b>Start Date</b> - Required. Start Date of the Report Exchange Rate, Format = yyyymmdd. Current and future dates allowed.</li>
           <li><b>End Date</b> - Required. End Date of the Report Exchange Rate, Format = yyyymmdd. Current and future dates allowed.</li>
-          <li><b>Exchange Rate</b> - Required. This is the exchange rate of between operating and accepted currency codes and supports up to 4 decimal values.</li>
+          <li><b>Exchange Rate</b> - Required. This is the exchange rate value of operating and accepted currency codes. It is a numeric value and supports up to 4 decimal values.</li>
         </ul>
       </div>
       <div class="modal-footer">
